# ml_pipeline

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Airflow_README.md  DOCKER_README.md  Jenkinsfile  Jenkinsfile.yaml  Makefile  README.md  README_new.md  controller.py  docker-compose.yml  docker_README.md  pyproject.toml  pytest.ini  setup.cfg
.dvc/: config
.github/workflows/: ci.yml
airflow/: airflow.cfg
airflow/dags/: MCPL_pipeline.py  airflow_tutorial_v01.py
data/01_raw/: Data_test.json.dvc  data.json.dvc  schema.json
docker/airflow/: Dockerfile  entrypoint.sh  init_entrypoint.sh  requirements.txt
docker/jupyter/: Dockerfile
docker/mlflow/: Dockerfile  entrypoint.sh  requirements.txt
docker/postgres/: Dockerfile  init-user-db.sh
docker/use_cases/: Dockerfile  entrypoint_init_git.sh
documentation/: DVC_data_versioning.md  airflow_setup.md  docker_setup.md  jupyter_notebooks.md  mlflow_backend_db.md  mlflow_setup.md  new_project_structure.md  project_structure.md
models/: artifacts.dvc
references/: DVC_data_versioning.md  MLflow_deployment.md  jupyter_notebooks.md  project_structure.md
requirements/: app.txt  dev.txt  test.txt
src/: config_variables.py  controller.py  core.py  requirements.txt  services.py
src/airflow_dags/: pipeline.py  pipeline_apis.py
src/data/: download_raw_data.py  request_data_downloander.py
src/data_validation/: pandera_schema_validator.py  schema_validation.py
src/features/: sklearn_data_transformer.py
src/models/: hyperparameter_opt.py  model_validation.py  (+1 more)
tests/: conftest.py  requirements.txt
(+99 files in other folders)
